[gd_scene load_steps=6 format=3 uid="uid://b14y8x4ihccax"]

[ext_resource type="Script" uid="uid://dj7t6qmt3ctl2" path="res://lessons_reference/turrets/weapons/projectiles/homing_rocket.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cvl201t68pnm7" path="res://turrets/weapons/projectiles/smoke_trail_particles.tscn" id="2_f5dkp"]
[ext_resource type="Texture2D" uid="uid://bf6567v8ax42a" path="res://turrets/weapons/projectiles/homing_missile.png" id="3_85dgd"]
[ext_resource type="Texture2D" uid="uid://bkvot3hdpkuxx" path="res://turrets/weapons/projectiles/missile_flame.png" id="4_twfqm"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(37, 14)

[node name="HomingRocket" type="Area2D"]
collision_layer = 0
monitorable = false
script = ExtResource("2")
max_distance = 2400.0

[node name="SmokeTrailParticles" parent="." instance=ExtResource("2_f5dkp")]
unique_name_in_owner = true
position = Vector2(-7, 0)

[node name="HomingMissile" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(26, 0)
texture = ExtResource("3_85dgd")

[node name="MissileFlame" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-17, 0)
texture = ExtResource("4_twfqm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(20.5, 0)
shape = SubResource("1")
